Remove test/commonmark/commonmark.json from pre-commit
Since a new version is downloaded during the CI testing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ exclude: >
       \.vscode/settings\.json|
       test/samples/.*|
       resources/.*|
-      .*\.xml
+      test/commonmark/commonmark\.json
     )$
 
 repos:
