Add line position to block tokens

--- a/test/test_renderers/test_json_renderer/test_basic.yml
+++ b/test/test_renderers/test_json_renderer/test_basic.yml
@@ -1,17 +1,200 @@
 children:
 - children:
-  - content: heading 1
+  - content: Setext Header
     type: RawText
   level: 1
+  position:
+  - 1
+  - 2
+  type: SetextHeading
+- children:
+  - content: Atx Header
+    type: RawText
+  level: 1
+  position:
+  - 4
+  - 4
   type: Heading
 - children:
-  - content: hello
-    type: RawText
+  - children:
+    - children:
+      - content: nested strong emphasis
+        type: RawText
+      type: Emphasis
+    type: Strong
   - content: ''
     soft: true
     type: LineBreak
-  - content: world
+  - content: <www.google.com>
     type: RawText
+  position:
+  - 6
+  - 7
   type: Paragraph
-link_definitions: {}
+- children:
+  - children:
+    - children:
+      - content: unordered list
+        type: RawText
+      position:
+      - 9
+      - 9
+      type: Paragraph
+    leader: '-'
+    loose: false
+    next_marker:
+    - 3
+    - '1.'
+    position:
+    - 8
+    - 10
+    prepend: 2
+    type: ListItem
+  leader: null
+  loose: false
+  position:
+  - 8
+  - 10
+  type: List
+- children:
+  - children:
+    - children:
+      - content: ordered list
+        type: RawText
+      position:
+      - 11
+      - 11
+      type: Paragraph
+    leader: '1.'
+    loose: false
+    next_marker: null
+    position:
+    - 10
+    - 11
+    prepend: 3
+    type: ListItem
+  leader: 1
+  loose: false
+  position:
+  - 10
+  - 11
+  type: List
+- children:
+  - children:
+    - content: 'quote '
+      type: RawText
+    - children:
+      - content: emphasis
+        type: RawText
+      type: Emphasis
+    position:
+    - 14
+    - 14
+    type: Paragraph
+  position:
+  - 13
+  - 13
+  type: Quote
+- children:
+  - children:
+    - content: link
+      type: RawText
+    target: abc
+    title: xyz
+    type: Link
+  position:
+  - 15
+  - 15
+  type: Paragraph
+- position:
+  - 17
+  - 17
+  type: LinkDefinition
+- children:
+  - content: 'code = 1
+
+      '
+    type: RawText
+  language: python
+  position:
+  - 19
+  - 21
+  type: CodeFence
+- children:
+  - content: 'block
+
+      quote
+
+      '
+    type: RawText
+  language: ''
+  position:
+  - 23
+  - 24
+  type: BlockCode
+- position:
+  - 26
+  - 26
+  type: ThematicBreak
+- children:
+  - children:
+    - align: null
+      children:
+      - content: '1'
+        type: RawText
+      position:
+      - 29
+      - 29
+      type: TableCell
+    - align: 1
+      children:
+      - content: '2'
+        type: RawText
+      position:
+      - 29
+      - 29
+      type: TableCell
+    position:
+    - 29
+    - 29
+    row_align:
+    - null
+    - 1
+    type: TableRow
+  column_align:
+  - null
+  - 1
+  header:
+    children:
+    - align: null
+      children:
+      - content: a
+        type: RawText
+      position:
+      - 27
+      - 27
+      type: TableCell
+    - align: 1
+      children:
+      - content: b
+        type: RawText
+      position:
+      - 27
+      - 27
+      type: TableCell
+    position:
+    - 27
+    - 27
+    row_align:
+    - null
+    - 1
+    type: TableRow
+  position:
+  - 27
+  - 30
+  type: Table
+link_definitions:
+  ref:
+  - abc
+  - xyz
 type: Document
