--- a/test/test_renderers/test_json_renderer/test_link_references.yml
+++ b/test/test_renderers/test_json_renderer/test_link_references.yml
@@ -6,8 +6,14 @@ children:
     target: spam
     title: ''
     type: Link
+  position:
+  - 1
+  - 1
   type: Paragraph
-- type: LinkDefinition
+- position:
+  - 3
+  - 3
+  type: LinkDefinition
 link_definitions:
   baz:
   - spam
