Replace test_block_token with pytest-regressions
Before these tests used mocking to test only aspects of the parsing and final AST. Converting the whole AST to JSON and regressing it is (a) more thorough, (b) easier to view/understand the inputs and expected outputs, (c) easier to debug any errors, and (d) easier to add more tests

--- a/test/test_renderers/test_json_renderer/test_link_references.yml
+++ b/test/test_renderers/test_json_renderer/test_link_references.yml
@@ -10,7 +10,11 @@ children:
   - 1
   - 1
   type: Paragraph
-- position:
+- definitions:
+  - - baz
+    - spam
+    - ''
+  position:
   - 3
   - 3
   type: LinkDefinition
