--- a/test/test_renderers/test_json_renderer/test_basic.yml
+++ b/test/test_renderers/test_json_renderer/test_basic.yml
@@ -106,7 +106,11 @@ children:
   - 19
   - 19
   type: Paragraph
-- position:
+- definitions:
+  - - ref
+    - abc
+    - xyz
+  position:
   - 21
   - 21
   type: LinkDefinition
@@ -201,6 +205,7 @@ front_matter:
   position:
   - 0
   - 3
+  type: FrontMatter
 link_definitions:
   ref:
   - abc
