Reset delimiter run, on matching code
Fixes miyuchina/mistletoe#70

--- a/test/test_span_token/test_nested_inline_code_in_star.yml
+++ b/test/test_span_token/test_nested_inline_code_in_star.yml
@@ -1,8 +1,6 @@
-- RawText:
-    content: '*'
-- InlineCode:
+- Emphasis:
     children:
-    - RawText:
-        content: a
-- RawText:
-    content: '*'
+    - InlineCode:
+        children:
+        - RawText:
+            content: a
