--- a/test/test_span_token/test_nested_inline_code_in_underscore.yml
+++ b/test/test_span_token/test_nested_inline_code_in_underscore.yml
@@ -1,8 +1,6 @@
-- RawText:
-    content: _
-- InlineCode:
+- Emphasis:
     children:
-    - RawText:
-        content: a
-- RawText:
-    content: _
+    - InlineCode:
+        children:
+        - RawText:
+            content: a
